[package]
name = "rustproxy"
version = "0.1.0"
authors = ["Konstantin Salikhov <koka58@yandex.ru>"]
edition = "2018"

[dependencies]
hyper = "0.13"
hyper-tls = "0.4.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
lazy_static = "1.4.0"
http = "0.2.0"
log = "0.4.8"
env_logger="0.7.1"
leaky-bucket="0.7.1"